# sdk-core

./: Cargo.toml
client-rs-example/: Cargo.toml
client-rs-example/src/: main.rs
